<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.DetailHomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:menu="@menu/detail_menu"
        app:navigationIcon="@drawable/ic_baseline_arrow_back"
        app:theme="@style/ToolbarColoredBackArrow">

        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Username" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/user_github_image"
            tools:src="@drawable/ic_baseline_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/repository"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_followers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/followers"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_following"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:text="0" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/following"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/location"
        android:textSize="13sp"
        app:drawableStartCompat="@drawable/ic_baseline_location_on" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/company_name"
        android:textSize="13sp"
        app:drawableStartCompat="@drawable/ic_baseline_card_travel" />

</LinearLayout>